# wechat-rs

./: .env.example  .gitignore  Cargo.toml  DEV_GUIDE.md  Dockerfile  README.md  USAGE.md  WECHAT_SERVER_SETUP.md  dev-setup.md  start-dev.sh  start.sh
examples/: basic_usage.rs  simple_auth.rs  wechat_server_example.rs
src/: config.rs  lib.rs  main.rs  wechat_auth.rs  wechat_server.rs
templates/: base.html  error.html  index.html  profile.html
